<resources>
    <string name="app_name">Slicing Ui</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile">profile</string>
    <string name="admin">Admin</string>
    <string name="good_morning">Good Morning</string>
    <string name="android">Android</string>
    <string name="unit">Unit</string>
    <string name="date_unit">20 June - 30 Mey</string>
</resources>